.metadata/.plugins/org.eclipse.cdt.ui/PA_Project_21_22.build.log
12:13:31 **** Incremental Build of configuration Debug for project PA_Project_21_22 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\gestore\\Gestore.o" "..\\src\\gestore\\Gestore.cpp" 
In file included from ..\src\gestore\Gestore.h:15:0,
                 from ..\src\gestore\Gestore.cpp:8:
..\src\gestore\../menu/MenuCompleto.h:29:7: error: no unique final overrider for 'virtual std::__cxx11::string Menu::get_string()' in 'MenuCompleto'
 class MenuCompleto : public MenuPrimo, MenuSecondo {
       ^~~~~~~~~~~~

12:13:32 Build Failed. 1 errors, 0 warnings. (took 568ms)

